# se05x-demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  se05x_demo_config.h
demo/tls-server/: CMakeLists.txt  Makefile  main.c
port/openssl/: CMakeLists.txt
port/se052f/: CMakeLists.txt  secure_element.c
src/demo/tls-server/: CMakeLists.txt  main.c
src/model/: secure_element.h
src/port/openssl/: CMakeLists.txt
src/port/se052f/: CMakeLists.txt  secure_element.c
